[forge1710] replace unimined with RFG